# Caffe_Light_Field

./: .gitignore  README.md  denseUNet.py  deploy.prototxt  function.py  ignore  input_list.txt  lf_func.py  main.py  model.py  qt4_demo.py  sandbox.prototxt  sandbox.txt  simple.ui  train.log.test  train.log.train
backup/: denseUNet_best.py  deploy.prototxt
cl_depth/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compileOpenCL.sh  main2.cpp  nano.save  ocl.cpp  ocl.h  run_shell  shell.py  shell.py.save  webcam  wta_lf.cl
deploy/: denseUNet++_deploy.py  denseUNet_deploy.prototxt  denseUNet_deploy.py  denseUNet_deploy2.py  denseUNet_deploy_8x8.py  denseUNet_flower_deploy.prototxt  denseUNet_iter.py
face_model_good/: denseUNet8x8.py
layers/: bgr_to_yuv.py  bilinear_sampler.py  bilinear_sampler_layer.py  bilinear_sampler_layer_3ch.py  blur_layer.py  center_lf.py  depth_layer.py  edge_layer.py  estimation_layer.py  euclidean_loss_layer.py  euclidean_loss_layer2.py  horizontal_mean_layer.py  image_print_layer.py  image_read_layer.py  image_transform.py  image_transform_3x3.py  input_shifting_layer.py  lf_add2_layer.py  lf_add9_layer.py  lf_axis_mean_layer.py  lf_extract_layer.py  lf_image_data_layer8x8.py  lf_mean_layer.py  lf_reloc_layer.py  lf_result_layer.py  my_image_data_layer.py  newStereoNet.prototxt  newStereoNet_solver.prototxt  newStereoNet_test.prototxt  norm_layer.py  print_error_layer.py  print_layer.py  print_scaled.py  print_shape_layer.py  shape_changer.py  total_loss_layer.py  vertical_mean_layer.py  visualization_layer.py  (+2 more)
(+754 files in other folders)
